--- a/cyberotica.html
+++ b/cyberotica.html
@@ -24,32 +24,31 @@
     <div class="col23 caption"><i>Cyberotica: Technology and Fetish in Contemporary Art,</i> 2020</div>
     <img class="col23" src="cyberotica/factoryofthesun2.jpg">  
     <img class="col23 lozad lazyload" data-src="cyberotica/foreword.jpg">
-    <div class="col23 diptych">
-        <img class="lozad lazyload" data-src="cyberotica/abstract1.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/contents2.jpg">
+
+        <img class="lozad col2" data-src="cyberotica/abstract1.jpg">
+        <img class="lozad col3" data-src="cyberotica/contents2.jpg">
     </div>
     <img class="col123" src="cyberotica/guiltymemory.jpg">
     <img class="col123" src="cyberotica/kentridge.jpg">
     <img class="col12 lozad lazyload" data-src="cyberotica/factoryofthesun.jpg"> 
     <div class="col12 polyptych">
-        <img class="lozad lazyload" data-src="cyberotica/zachblas.jpg">  
-        <img class="lozad lazyload" data-src="cyberotica/meatmetalcode2.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/koolaidman1.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/cybercinema.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/gallianowang.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/hownottobeseen.jpg">  
-        <img class="lozad lazyload" data-src="cyberotica/echoes.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/cybeRoberta.jpg">  
-        <img class="lozad lazyload" data-src="cyberotica/cyberfeminism.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/femmealien.jpg">  
-        <img class="lozad lazyload" data-src="cyberotica/chapter2head.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/chapter2contents.jpg">  
+        <img class="lozad" data-src="cyberotica/zachblas.jpg">  
+        <img class="lozad" data-src="cyberotica/meatmetalcode2.jpg">
+        <img class="lozad" data-src="cyberotica/koolaidman1.jpg">
+        <img class="lozad" data-src="cyberotica/cybercinema.jpg">
+        <img class="lozad" data-src="cyberotica/gallianowang.jpg">
+        <img class="lozad" data-src="cyberotica/hownottobeseen.jpg">  
+        <img class="lozad" data-src="cyberotica/echoes.jpg">
+        <img class="lozad" data-src="cyberotica/cybeRoberta.jpg">  
+        <img class="lozad" data-src="cyberotica/cyberfeminism.jpg">
+        <img class="lozad" data-src="cyberotica/femmealien.jpg">  
+        <img class="lozad" data-src="cyberotica/chapter2head.jpg">
+        <img class="lozad" data-src="cyberotica/chapter2contents.jpg">  
      </div>
     <img class="col123" src="cyberotica/index.jpg">
-    <div class="col23 diptych">
-        <img class="lozad lazyload" data-src="cyberotica/coverscan2 copy.jpg">  
-        <img class="lozad lazyload" data-src="cyberotica/backcoverwspine copy.jpg">
-    </div>
+
+        <img class="lozad col2" data-src="cyberotica/coverscan2 copy.jpg">  
+        <img class="lozad col3" data-src="cyberotica/backcoverwspine copy.jpg">
 
 <!-----------------------lightbox---------------------->
 <!-- Lightbox container -->
