--- a/fossora.html
+++ b/fossora.html
@@ -34,10 +34,9 @@
             <source src="fossora/ancestress-insitu-3.mp4">
         </video>
     </div>
-        <div class="diptych col12">
-            <img class="lozad" data-src="fossora/Mikki_Ancestress 2.jpg">
-            <img class="lozad" data-src="fossora/Mikki_Ancestress 3.jpg">
-        </div>
+
+            <img class="lozad col1" data-src="fossora/Mikki_Ancestress 2.jpg">
+            <img class="lozad col2" data-src="fossora/Mikki_Ancestress 3.jpg">
         <div class="caption col3" style="align-self:end">Featuring stills and footage from ancestress, directed by Andrew Thomas Huang and costumed by Pier Paolo Piccioli for Valentino.</div>
         <img class="lozadcol23" data-src="fossora/Mikki_Ancestress 5.jpg">
 
@@ -51,10 +50,10 @@
                 </video>
             </div>
             <img class="lozad col23" data-src="fossora/Mikki_Ovule 2.jpg"> 
-            <div class="diptych col23">
-                <img class="lozad" data-src="fossora/Mikki_Ovule 4.jpg">
-                <img class="lozad" data-src="fossora/Mikki_Ovule 7.jpg">
-            </div>
+
+                <img class="lozad col2" data-src="fossora/Mikki_Ovule 4.jpg">
+                <img class="lozad col3" data-src="fossora/Mikki_Ovule 7.jpg">
+
             <img class="col1 lozad" data-src="fossora/Mikki_Ovule 6.jpg"> 
             <img class="col3 lozad" data-src="fossora/Mikki_Ovule 1.jpg">
 
