--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -29,14 +29,12 @@
         <video muted autoplay loop src="joshualeifer/about-draggable.mp4"></video>
     </div>
 
-     <div class="col23 diptych">
-            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 8.jpg">  
-            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 3.jpg">
-       </div>
-        <div class="col23 diptych">
-            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 4.jpg">  
-            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 1.jpg">
-        </div>
+            <img class="lozad col2" data-src="joshualeifer/Mikki_JoshLeifer 8.jpg">  
+            <img class="lozad col3" data-src="joshualeifer/Mikki_JoshLeifer 3.jpg">
+
+            <img class="lozad col2" data-src="joshualeifer/Mikki_JoshLeifer 4.jpg">  
+            <img class="lozad col3" data-src="joshualeifer/Mikki_JoshLeifer 1.jpg">
+
 
     </section>  
     
