--- a/nytimes.html
+++ b/nytimes.html
@@ -54,15 +54,15 @@
 
     <div class="col23 subhead">Art Direction: Times Insider</div>
     <div class="col23 caption">Times Insider delivers behind-the-scenes insights into how Times journalism comes together. Each day, a new installment can be found online and on page 2 of the print newspaper.</div>
-    <div class="col23 diptych">
-        <img class="lozad" data-src="nytimes/poetryinsider_deep.jpg">
-        <img class="lozad" data-src="nytimes/stapleton.jpg">
-    </div>
+
+        <img class="lozad col2" data-src="nytimes/poetryinsider_deep.jpg">
+        <img class="lozad col3" data-src="nytimes/stapleton.jpg">
+        
     <div class="col23 caption"><span>Left: Antoine Cossé. Right: Holly Stapleton.</span></div>
-    <div class="col23 diptych">
-        <img class="lozad" data-src="nytimes/assault.png">
-        <img class="lozad" data-src="nytimes/fike.png">
-    </div>
+
+        <img class="lozad col2" data-src="nytimes/assault.png">
+        <img class="lozad col3" data-src="nytimes/fike.png">
+
     <div class="col23 caption"><span>Left: Jordan Gale. Right: Daniel Prakopcyk</span></div>
 
 
