--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -30,33 +30,29 @@
 <div class="col12 video-wrapper">
     <video class="lozad" muted autoplay loop data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
 </div>
-<div class="col3 caption">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
-<div class="diptych col12">
-    <div class="video-wrapper">
+<div class="col3 caption nested right">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
+
+    <div class="video-wrapper col1">
         <video class="lozad" muted autoplay loop data-src="tetragrammaton/RR_Homepage_Logo.mp4"></video>
     </div>
-    <div class="video-wrapper">
+    <div class="video-wrapper col2">
         <video class="lozad" muted autoplay loop data-src="tetragrammaton/audiolines.mp4"></video>
     </div>
-</div>
+
 <div class="col3 caption nested" style="align-self:end;">We brought the identity to life with motion, highlighting the wordmark's simple geometric forms.</div>
 
 <!-----------------tetragrammaton website------------>
 <img class="col123" src="tetragrammaton/tetragrammaton_landing.jpg">
 <div class="col1 caption">The site is ever-changing, its landing page spotlighting a new artwork each day. Its design, however, is pared down to a scaffolding, creating quiet spaces where content can speak and visitors can listen.</div>
 
-<div class="diptych col23">
-    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 2.png">
-    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 3.png">
-</div>
+    <img class="lozad col2" data-src="tetragrammaton/Mikki_Tetragrammaton 2.png">
+    <img class="lozad col3" data-src="tetragrammaton/Mikki_Tetragrammaton 3.png">
 
-<div class="diptych col23">
-    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 5.png">
-    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 4.png">
-</div>
+    <img class="lozad col2" data-src="tetragrammaton/Mikki_Tetragrammaton 5.png">
+    <img class="lozad col3" data-src="tetragrammaton/Mikki_Tetragrammaton 4.png">
 
 
-<div class="col12 video-wrapper" id="player-wrapper">
+<div class="col12 video-wrapper" id="player-wrapper" style="margin-top:0px; margin-bottom:0px">
     <iframe id="player" src="https://www.youtube.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <div class="col1 caption">Our <a href="https://collection.squarespace.com/rickrubin" target="_blank">campaign film</a>, shot in Rubin's Los Angeles studio, walks through his creative process and his vision for the Tetragrammaton ecosystem.</div>
