--- a/mhns.html
+++ b/mhns.html
@@ -30,35 +30,32 @@
            <source src="mhns/mhns-flipbook.mp4">
         </video>
     </div>
-    <div class="col23 diptych">
-         <img class="lozad" data-src="mhns/Mikki_MHNS 3.jpg">
-        <img class="lozad" data-src="mhns/Mikki_MHNS 4.jpg">  
-    </div>
-    <div class="col23 diptych">
-        <img class="lozad" data-src="mhns/Mikki_MHNS 6.jpg">
-        <img class="lozad" data-src="mhns/Mikki_MHNS 10.jpg">  
-    </div>
-    <div class="col23 diptych">
-        <img class="lozad" data-src="mhns/Mikki_MHNS 8.jpg">
-        <img class="lozad" data-src="mhns/Mikki_MHNS 5.jpg">  
-    </div>
+
+         <img class="lozad col2" data-src="mhns/Mikki_MHNS 3.jpg">
+        <img class="lozad col3" data-src="mhns/Mikki_MHNS 4.jpg">  
+
+        <img class="lozad col2" data-src="mhns/Mikki_MHNS 6.jpg">
+        <img class="lozad col3" data-src="mhns/Mikki_MHNS 10.jpg">  
+
+
+        <img class="lozad col2" data-src="mhns/Mikki_MHNS 8.jpg">
+        <img class="lozad col3" data-src="mhns/Mikki_MHNS 5.jpg">  
+
 
     <div class="col23 caption">Exhibition Catalog for <i>Money Has No Smell</i><span class="citation">Typeset in Radion A by General Type Studio; printed by Conveyor Press</span></div>
             
     <img class="col12 lozad" data-src="mhns/jenica_heintzelman2.jpeg"></img>
-    <div class="col12 diptych">
-        <img class="lozad" data-src="mhns/jenica_heintzelman.jpeg">
-        <img class="lozad" data-src="mhns/jenica_heintzelman1.jpeg">  
-    </div>
+
+        <img class="lozad col1" data-src="mhns/jenica_heintzelman.jpeg">
+        <img class="lozad col2" data-src="mhns/jenica_heintzelman1.jpeg">  
     <div class="col12 caption">Exhibition graphics at the opening of <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
-    <div class="col12 diptych">
-        <img class="lozad" data-src="mhns/jenica_heintzelman-9568.jpg">
-        <img class="lozad" data-src="mhns/jenica_heintzelman-9698.jpg">  
-    </div>
-    <div class="col12 diptych">
-        <img class="lozad" data-src="mhns/jenica_heintzelman-9638.jpg">
-        <img class="lozad" data-src="mhns/jenica_heintzelman-9805.jpg">  
-     </div>
+
+        <img class="lozad col1" data-src="mhns/jenica_heintzelman-9568.jpg">
+        <img class="lozad col2" data-src="mhns/jenica_heintzelman-9698.jpg">  
+
+        <img class="lozad col1" data-src="mhns/jenica_heintzelman-9638.jpg">
+        <img class="lozad col2" data-src="mhns/jenica_heintzelman-9805.jpg">  
+
     <div class="col12 caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
 </section>
 
