--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section class="col123 new-listing" data-link="fossora.html">
     <div class="diptych">
         <img src="fossora/Mikki_Ovule 8.jpg">
-        <div class="video-wrapper">
+        <div class="video-wrapper not-mobile">
             <video muted autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4"></video>
         </div>
     </div>
@@ -30,7 +30,7 @@
             <source src="acuity/motion-ooh-2.mp4">
          </video>
         </div>
-        <img src="acuity/Acuity-mockup-screen-cooler.png">
+        <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
     </div>
     <h3>Identity <span class="client">Acuity Scheduling</span></h3>
 </section>
@@ -38,7 +38,7 @@
 <section class="col123 new-listing" data-link="venndiagramm.html">
     <div class="diptych">
         <img class="lozad" data-src="venndiagramm/CurioShop-15.jpg">
-        <img class="lozad" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+        <img class="lozad not-mobile" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
     </div>
     <h3>Publication Design <span class="client">Venn Diagramm</span></h3>
 </section>
@@ -46,7 +46,7 @@
 <section class="col123 new-listing" data-link="mhns.html">
     <div class="diptych">
         <img class="lozad" data-src="mhns/Mikki_MHNS 1.jpg">
-        <div class="video-wrapper">
+        <div class="video-wrapper not-mobile">
             <video class="lozad" muted autoplay loop data-src="mhns/mhns-flipbook.mp4"></video>
         </div>
     </div>
@@ -57,7 +57,7 @@
  <section class="col123 new-listing" data-link="tetragrammaton.html">
     <div class="diptych">
         <img class="lozad" data-src="tetragrammaton/Inscreen_Laptop.jpg">
-        <div class="video-wrapper">
+        <div class="video-wrapper not-mobile">
             <video muted autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
         </div>
     </div>
@@ -67,7 +67,7 @@
  <section class="col123 new-listing" data-link="community.html">
     <div class="diptych">
         <img class="lozad" data-src="community/contents.jpg">
-        <img class="lozad" data-src="community/32-33.jpg">
+        <img class="lozad not-mobile" data-src="community/32-33.jpg">
     </div>
 <h3>A Community is a Garden <span class="client">The Guggenheim</span></h3>
 </section>
@@ -76,7 +76,7 @@
  <section class="col123 new-listing" data-link="spaceopera.html">
     <div class="diptych">
         <img class="lozad" data-src="spaceopera/spaceopera1.png">
-        <img class="lozad" data-src="spaceopera/spaceopera3.png">
+        <img class="lozad not-mobile" data-src="spaceopera/spaceopera3.png">
     </div>
     <h3>Illustration <span class="client">The Baffler</span></h3>
 </section>
@@ -94,7 +94,7 @@
          <video muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation.mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video muted autoplay loop class="lozad" data-src="joshualeifer/about-draggable.mp4"></video>
+            <video muted autoplay loop class="lozad not-mobile" data-src="joshualeifer/about-draggable.mp4"></video>
         </div>
     </div>
     <h3>Site <span class="client">Joshua Leifer</span></h3>
@@ -104,7 +104,7 @@
  <section class="col123 new-listing" data-link="cyberotica.html">
     <div class="diptych">
         <img class="lozad" data-src="cyberotica/radicallove.jpg">
-        <img class="lozad" data-src="cyberotica/guiltymemory.jpg">
+        <img class="lozad not-mobile" data-src="cyberotica/guiltymemory.jpg">
     </div>
     <h3>Cyberotica <span class="client">Sam Fox School of Design</span></h3>
 </section>
@@ -116,7 +116,7 @@
             <video muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video muted autoplay loop class="lozad" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video>
+            <video muted autoplay loop class="lozad not-mobile" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video>
         </div> 
     </div>
     <h3>Archive & Experiments <span class="client">Various / Personal</span></h3>
