--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:image" content="assets/social_share2.png">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
     
 </head>
 <body>
