--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Mikki Janower</title>
     <meta property="og:image" content="assets/social_share2.png">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 
 <body>
@@ -112,12 +113,8 @@
  <!-----------------------Experiments----------------------->
  <section class="col123 new-listing" style="align-self:end" data-link="archive.html">
     <div class="diptych">
-        <div class="video-wrapper">
-            <video muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4"></video>
-        </div>
-        <div class="video-wrapper">
-            <video muted autoplay loop class="lozad not-mobile" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video>
-        </div> 
+        <div class="video-wrapper"><video muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4"></video></div>
+        <div class="video-wrapper"><video muted autoplay loop class="lozad not-mobile" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video></div> 
     </div>
     <h3>Archive & Experiments <span class="client">Various / Personal</span></h3>
 </section>
