--- a/nytimes.html
+++ b/nytimes.html
@@ -7,6 +7,7 @@
 
     <title>Mikki Janower: The New York Times</title>
     <meta property="og:image" content="nytimes/nyt15.png">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 <body>
 <section id="wrapper">
@@ -57,7 +58,7 @@
 
         <img class="lozad col2" data-src="nytimes/poetryinsider_deep.jpg">
         <img class="lozad col3" data-src="nytimes/stapleton.jpg">
-        
+
     <div class="col23 caption"><span>Left: Antoine Cossé. Right: Holly Stapleton.</span></div>
 
         <img class="lozad col2" data-src="nytimes/assault.png">
