--- a/spaceopera.html
+++ b/spaceopera.html
@@ -7,6 +7,7 @@
 
     <title>Mikki Janower: The Baffler</title>
     <meta property="og:image" content="spaceopera/spaceopera1.jpeg">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 <body>
 <section id="wrapper">
