--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -6,6 +6,7 @@
 
     <title>Mikki Janower: Venn Diagramm</title>
     <meta property="og:image" content="venndiagramm/CurioShop-15.jpg">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
 
             <img class="lozad col1" data-src="venndiagramm/GardenofEden 1920x1280 1.png">
             <img class="lozad col2" data-src="venndiagramm/GardenofEden 1920x1280 13.png">
-            
+
         <div class="subhead col12">Garden of Eden</div>
 
         <img class="col123 spaced" src="venndiagramm/VennDiagramm 6.png">
