--- a/cyberotica.html
+++ b/cyberotica.html
@@ -7,6 +7,7 @@
 
     <title>Mikki Janower: Cyberotica</title>
     <meta property="og:image" content="cyberotica/radicallove.jpg">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 <body>
 
