--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -5,6 +5,7 @@
 
     <title>Mikki Janower: Joshua Leifer</title>
     <meta property="og:image" content="joshualeifer/Mikki_JoshLeifer 2.jpg">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 
 <body>
