--- a/mhns.html
+++ b/mhns.html
@@ -6,6 +6,7 @@
 
     <title>Mikki Janower: Money Has No Smell</title>
     <meta property="og:image" content="mhns/mhns.png">
+    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
 </head>
 
 <body>
