meta info update

--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
 
     <title>Mikki Janower: Archive</title>
     <meta property="og:image" content="mhns/mhns.png">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="Past projects, personal pursuits, and outtakes.">
 </head>
 
 <body>
