--- a/nytimes.html
+++ b/nytimes.html
@@ -7,7 +7,7 @@
 
     <title>Mikki Janower: The New York Times</title>
     <meta property="og:image" content="nytimes/nyt15.png">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="Editorial design and art direction for the print department of The New York Times.">
 </head>
 <body>
 <section id="wrapper">
