--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -6,7 +6,7 @@
 
     <title>Mikki Janower: Venn Diagramm</title>
     <meta property="og:image" content="venndiagramm/CurioShop-15.jpg">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="Book and zine design for Venn Diagramm, a playful self-founded art initiative.">
 </head>
 
 <body>
