--- a/acuity.html
+++ b/acuity.html
@@ -6,7 +6,7 @@
 
     <title>Mikki Janower: Acuity Scheduling</title>
     <meta property="og:image" content="acuity/Acuity_Guidelines_Applications_04.webp">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="A brand identity that responds dynamically to the passage of time, developed for Acuity Scheduling.">
 </head>
 
 <body>
