--- a/community.html
+++ b/community.html
@@ -6,7 +6,7 @@
 
     <title>Mikki Janower: A Community is a Garden</title>
     <meta property="og:image" content="community/cover.jpg">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="A toolkit for artistic practice towards grassroots action, designed for the inaugural Guggenheim student research practicum.">
 </head>
 
 <body>
