--- a/fossora.html
+++ b/fossora.html
@@ -6,7 +6,7 @@
 
     <title>Mikki Janower: fossora, Björk</title>
     <meta property="og:image" content="fossora/Mikki_Ovule 8.jpg">
-    <meta name="description" content="Mikki Janower is a multidisciplinary designer, art director, and researcher. She maintains an independent practice across media, music, and the arts, and co-operates print and art collective Venn Diagramm.">
+    <meta name="description" content="An immersive virtual environment for the critically acclaimed album by Björk, built in collaboration with the artist.">
 </head>
 
 <body>
