added type info for mp4s

--- a/acuity.html
+++ b/acuity.html
@@ -84,7 +84,7 @@
         <div class="video-wrapper col23">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-calendarblocks.webm">
-                <source src="acuity/acuity-motion-calendarblocks.mp4">
+                <source src="acuity/acuity-motion-calendarblocks.mp4" type="video/mp4">
             </video>
         </div>
         <div class="col23 caption">In its brand communications, Acuity surfaces appear smooth and glassy, yet welcoming and warm.</div>
@@ -98,13 +98,13 @@
         <div class="video-wrapper col12">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-laptop.webm">
-                <source src="acuity/acuity-motion-laptop.mp4">
+                <source src="acuity/acuity-motion-laptop.mp4" type="video/mp4">
             </video>
         </div>
         <div class="video-wrapper col12">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-ooh.webm">
-                <source src="acuity/acuity-motion-ooh.mp4">
+                <source src="acuity/acuity-motion-ooh.mp4" type="video/mp4">
             </video>
         </div>
 
