--- a/archive.html
+++ b/archive.html
@@ -23,7 +23,7 @@
 <!------------------------mario void----------------------->
 <div class="video-wrapper col123">
     <video muted autoplay loop>
-        <source src="archive/Mikki_mariovoid_gameover-op.mp4">
+        <source src="archive/Mikki_mariovoid_gameover-op.mp4" type="video/mp4">
     </video>
 </div>
 <h2 class="col123"><a href="https://mikki-janower.github.io/supermariovoid/" target="_blank">Super Mario Void, </a>a nihilistic minigame <span class="client">2019</span></h2>
@@ -41,7 +41,7 @@
 <!------------------------Le Ren----------------------->
         <div class="video-wrapper col123">
             <video muted autoplay loop>
-                <source src="archive/Mikki_Leren-Homepage.mp4">
+                <source src="archive/Mikki_Leren-Homepage.mp4" type="video/mp4">
             </video>
         </div>
         <h2 class="col123">Site and wiordmark <span class="client">Le Ren, 2022</span></h2>
@@ -53,7 +53,7 @@
 <!---------------------delineator----------------------->
 <div class="video-wrapper col123">
     <video muted autoplay loop>
-        <source src="delineator/delineator!.mp4">
+        <source src="delineator/delineator!.mp4" type="video/mp4">
     </video>
 </div>
 <h2 class="col123"><a href="https://mikki-janower.github.io/Delineator/" target="_blank">Delineator,</a> an open-source pixel art tool <span class="client">2023</span></h2>
