--- a/fossora.html
+++ b/fossora.html
@@ -32,7 +32,7 @@
     <div class="subhead col12">b2. ancestress</div>
     <div class="video-wrapper col12">
         <video muted autoplay loop>
-            <source src="fossora/ancestress-insitu-3.mp4">
+            <source src="fossora/ancestress-insitu-3.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -47,7 +47,7 @@
             <div class="video-wrapper col123">
                 <video muted autoplay loop>
                     <source src="fossora/Mikki_Ovule-insitu-2.webm">
-                    <source src="fossora/Mikki_Ovule-insitu-2.mp4">
+                    <source src="fossora/Mikki_Ovule-insitu-2.mp4" type="video/mp4">
                 </video>
             </div>
             <img class="lozad col23" data-src="fossora/Mikki_Ovule 2.jpg"> 
@@ -61,7 +61,7 @@
         <img class="lozad col1" data-src="fossora/Mikki_Ovule 5.jpg">
         <div class="caption col1">Featuring stills and footage from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
         <div class="video-wrapper col23">
-            <video muted autoplay loop class="lozad" data-src="fossora/Mikki_Ovule-insitu-1.mp4"></video>
+            <video muted autoplay loop class="lozad" data-src="fossora/Mikki_Ovule-insitu-1.mp4" type="video/mp4"></video>
         </div>
             <img class="col123" src="fossora/Mikki_Ovule 3.jpg"> 
     <!----------------------------Atopos--------------------------------->
@@ -77,7 +77,7 @@
     <div class="caption col2">Featuring stills and footage from sorrowful soil, directed by Vidar Logi.</div>
     <img class="lozad col3" data-src="fossora/Mikki_SorrowfulSoil 1.jpg">
     <div class="video-wrapper col123">
-       <video muted autoplay loop class="lozad" data-src="fossora/Mikki_SorrowfulSoil.mp4"></video>
+       <video muted autoplay loop class="lozad" data-src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
     </div>
 
        
