--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="diptych">
         <img src="fossora/Mikki_Ovule 8.jpg">
         <div class="video-wrapper not-mobile">
-            <video muted autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4"></video>
+            <video muted autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>fossora <span class="client">Squarespace x Björk</span></h3>
@@ -28,7 +28,7 @@
         <div class="video-wrapper">
          <video muted autoplay loop>
             <source src="acuity/motion-ooh-2.webm">
-            <source src="acuity/motion-ooh-2.mp4">
+            <source src="acuity/motion-ooh-2.mp4" type="video/mp4">
          </video>
         </div>
         <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
@@ -48,7 +48,7 @@
     <div class="diptych">
         <img class="lozad" data-src="mhns/Mikki_MHNS 1.jpg">
         <div class="video-wrapper not-mobile">
-            <video class="lozad" muted autoplay loop data-src="mhns/mhns-flipbook.mp4"></video>
+            <video class="lozad" muted autoplay loop data-src="mhns/mhns-flipbook.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Money Has No Smell <span class="client">CUE Art Foundation</span></h3>
@@ -59,7 +59,7 @@
     <div class="diptych">
         <img class="lozad" data-src="tetragrammaton/Inscreen_Laptop.jpg">
         <div class="video-wrapper not-mobile">
-            <video muted autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
+            <video muted autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Tetragrammaton <span class="client">Squarespace x Rick Rubin</span></h3>
@@ -92,10 +92,10 @@
  <section class="col123 new-listing" style="align-self:end" data-link="joshualeifer.html">
     <div class="diptych">
         <div class="video-wrapper">
-         <video muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation.mp4"></video>
+         <video playsinline muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation.mp4" type="video/mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video muted autoplay loop class="lozad not-mobile" data-src="joshualeifer/about-draggable.mp4"></video>
+            <video playsinline muted autoplay loop class="lozad not-mobile" data-src="joshualeifer/about-draggable.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Site <span class="client">Joshua Leifer</span></h3>
@@ -113,8 +113,8 @@
  <!-----------------------Experiments----------------------->
  <section class="col123 new-listing" style="align-self:end" data-link="archive.html">
     <div class="diptych">
-        <div class="video-wrapper"><video muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4"></video></div>
-        <div class="video-wrapper"><video muted autoplay loop class="lozad not-mobile" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video></div> 
+        <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4" type="video/mp4"></video></div>
+        <div class="video-wrapper"><video playsinline muted autoplay loop class="lozad not-mobile" data-src="archive/Mikki_mariovoid_gameover-op.mp4" type="video/mp4"></video></div> 
     </div>
     <h3>Archive & Experiments <span class="client">Various / Personal</span></h3>
 </section>
