new video file attempt

--- a/spaceopera.html
+++ b/spaceopera.html
@@ -22,9 +22,9 @@
         <p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas.</a></p>
     </div>
 
-    <img class="col23" src="spaceopera/spaceopera1.png"> 
+    <img class="col23" src="spaceopera/spaceopera1.jpeg"> 
    <!--- <div class="col23 caption">Cover art for vol. 61, <i>Space Opera</i>. Footage from the Apollo Missions.</div> -->
-    <img class="col23 lozad" data-src="spaceopera/spaceopera3.png">
+    <img class="col23 lozad" data-src="spaceopera/spaceopera3.jpeg">
    <!-- <div class="col23 caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>-->
 
 
