--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
  <!--------------------------The Baffler----------------------->
  <section class="col123 new-listing" data-link="spaceopera.html">
     <div class="diptych">
-        <img class="lozad" data-src="spaceopera/spaceopera1.png">
-        <img class="lozad not-mobile" data-src="spaceopera/spaceopera3.png">
+        <img class="lozad" data-src="spaceopera/spaceopera1.jpeg">
+        <img class="lozad not-mobile" data-src="spaceopera/spaceopera3.jpeg">
     </div>
     <h3>Illustration <span class="client">The Baffler</span></h3>
 </section>
@@ -92,10 +92,10 @@
  <section class="col123 new-listing" style="align-self:end" data-link="joshualeifer.html">
     <div class="diptych">
         <div class="video-wrapper">
-         <video playsinline muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation.mp4" type="video/mp4"></video>
+         <video playsinline muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation-optimized.mp4" type="video/mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video playsinline muted autoplay loop class="lozad not-mobile" data-src="joshualeifer/about-draggable.mp4" type="video/mp4"></video>
+            <video playsinline muted autoplay loop class="lozad not-mobile" data-src="joshualeifer/about-draggable-optimized.mp4" type="video/mp4"></video>
         </div>
     </div>
     <h3>Site <span class="client">Joshua Leifer</span></h3>
