nyt documentation updates

--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
 </section>
 
  <!--------------------------NYT----------------------->
- <!--<section class="col12 new-listing" data-link="nytimes.html">
-    <img class="lozadd" data-src="nytimes/nyt15.png">
+ <section class="col123 new-listing" data-link="nytimes.html">
+    <div class="diptych">
+        <img class="lozad" data-src="nytimes/Mikki_NYT 3.jpg">
+        <img class="lozad" data-src="nytimes/Mikki_NYT 5.jpg">
+    </div>
     <h3>AD and Design <span class="client">The New York Times</span></h3>
-</section>-->
+</section>
 
  <!--------------------------Joshua Leifer----------------------->
  <section class="col123 new-listing" style="align-self:end" data-link="joshualeifer.html">
