--- a/nytimes.html
+++ b/nytimes.html
@@ -61,8 +61,8 @@
 
     <div class="col23 caption"><span>Left: Antoine Cossé. Right: Holly Stapleton.</span></div>
 
-        <img class="lozad col2" data-src="nytimes/assault.png">
-        <img class="lozad col3" data-src="nytimes/fike.png">
+        <img class="lozad col2" data-src="nytimes/Mikki_NYT 9-deep.jpg">
+        <img class="lozad col3" data-src="nytimes/Mikki_NYT 10-deep.jpg">
 
     <div class="col23 caption"><span>Left: Jordan Gale. Right: Daniel Prakopcyk</span></div>
 
