--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
  <section class="col123 new-listing" data-link="nytimes.html">
     <div class="diptych">
         <img class="lozad" data-src="nytimes/Mikki_NYT 3.jpg">
-        <img class="lozad" data-src="nytimes/Mikki_NYT 5.jpg">
+        <img class="lozad not-mobile" data-src="nytimes/Mikki_NYT 5.jpg">
     </div>
     <h3>AD and Design <span class="client">The New York Times</span></h3>
 </section>
