added type=video.mp4 to all videos

--- a/acuity.html
+++ b/acuity.html
@@ -27,7 +27,7 @@
         <div class="video-wrapper col23">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-logo-lockup.webm">
-                <source src="acuity/acuity-motion-logo-lockup.mp4">
+                <source src="acuity/acuity-motion-logo-lockup.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -60,7 +60,7 @@
         <div class="spaced video-wrapper col23">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-colon.webm">
-                <source src="acuity/acuity-motion-colon.mov">
+                <source src="acuity/acuity-motion-colon.mov" type="video/mp4">
             </video>
         </div>
         <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
