--- a/mhns.html
+++ b/mhns.html
@@ -28,7 +28,7 @@
     <div class="col23 video-wrapper">
         <video muted autoplay loop>
            <source src="mhns/mhns-flipbook.webm">
-           <source src="mhns/mhns-flipbook.mp4">
+           <source src="mhns/mhns-flipbook.mp4" type="video/mp4">
         </video>
     </div>
 
