--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -29,15 +29,15 @@
 
 <!---------------------motion------------------------>
 <div class="col12 video-wrapper">
-    <video class="lozad" muted autoplay loop data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
+    <video class="lozad" muted autoplay loop data-src="tetragrammaton/tetragrammaton-logo-screen.mp4" type="video/mp4"></video>
 </div>
 <div class="col3 caption nested right">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
 
     <div class="video-wrapper col1">
-        <video class="lozad" muted autoplay loop data-src="tetragrammaton/RR_Homepage_Logo.mp4"></video>
+        <video class="lozad" muted autoplay loop data-src="tetragrammaton/RR_Homepage_Logo.mp4" type="video/mp4"></video>
     </div>
     <div class="video-wrapper col2">
-        <video class="lozad" muted autoplay loop data-src="tetragrammaton/audiolines.mp4"></video>
+        <video class="lozad" muted autoplay loop data-src="tetragrammaton/audiolines.mp4" type="video/mp4"></video>
     </div>
 
 <div class="col3 caption nested" style="align-self:end;">We brought the identity to life with motion, highlighting the wordmark's simple geometric forms.</div>
