--- a/fossora.html
+++ b/fossora.html
@@ -70,7 +70,7 @@
             <div class="caption col3" style="align-self:end">Featuring stills and footage from atopos, directed by Vidar Logi and costumed by Burberry.</div>
             <img class="lozad col3" style="align-self:end" data-src="fossora/Mikki_Atopos 2.jpg">
             <div class="video-wrapper col23">
-                <video muted autoplay loop class="lozad" data-src="fossora/bjork-in-position.mp4"></video>
+                <video muted autoplay loop class="lozad" data-src="fossora/bjork-in-position.mp4" type="video/mp4"></video>
             </div>
     <!------------------------------Sorrowful Soil------------------------------------->
     <div class="subhead col1">b4. sorrowful soil </div>
