--- a/acuity.html
+++ b/acuity.html
@@ -96,16 +96,10 @@
 
 <!---------------------applications------------------>
         <div class="video-wrapper col12">
-            <video muted autoplay loop>
-                <source src="acuity/acuity-motion-laptop.webm">
-                <source src="acuity/acuity-motion-laptop.mp4" type="video/mp4">
-            </video>
+            <video class="lozad" muted autoplay loop data-src="acuity/Acuity-motion-timepassage.mp4" type="video/mp4"></video>
         </div>
         <div class="video-wrapper col12">
-            <video muted autoplay loop>
-                <source src="acuity/acuity-motion-ooh.webm">
-                <source src="acuity/acuity-motion-ooh.mp4" type="video/mp4">
-            </video>
+            <video class="lozad" muted autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
         </div>
 
 
