--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
     <div class="diptych">
         <div class="video-wrapper">
-         <video muted autoplay loop>
-            <source src="acuity/motion-ooh-2.webm">
-            <source src="acuity/motion-ooh-2.mp4" type="video/mp4">
-         </video>
+            <video class="lozad" muted autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
         </div>
         <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
     </div>
