--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section class="col123 new-listing" style="align-self:end" data-link="acuity.html">
     <div class="diptych">
         <div class="video-wrapper">
-            <video class="lozad" muted autoplay loop data-src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
+            <video muted autoplay loop src="acuity/ooh-optimized.mp4" type="video/mp4"></video>
         </div>
         <img class="not-mobile" src="acuity/Acuity-mockup-screen-cooler.png">
     </div>
