more video swaps

--- a/acuity.html
+++ b/acuity.html
@@ -25,10 +25,7 @@
         <img class="col23" src="acuity/Acuity_Guidelines_Applications_05.webp">
 <!---------------------color----------------------->
         <div class="video-wrapper col23">
-            <video muted autoplay loop>
-                <source src="acuity/acuity-motion-logo-lockup.webm">
-                <source src="acuity/acuity-motion-logo-lockup.mp4" type="video/mp4">
-            </video>
+            <video muted autoplay loop src="acuity/logo-lockup.mp4" type="video/mp4"></video>
         </div>
 
         <img class="col2" src="acuity/Logo Gradients.png">
@@ -58,10 +55,7 @@
 
 <!---------------------motion----------------------->
         <div class="spaced video-wrapper col23">
-            <video muted autoplay loop>
-                <source src="acuity/acuity-motion-colon.webm">
-                <source src="acuity/acuity-motion-colon.mov" type="video/mp4">
-            </video>
+            <video class="lozad" muted autoplay loop data-src="acuity/motion-colon.mp4" type="video/mp4"></video>
         </div>
         <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
 
@@ -82,20 +76,13 @@
             <img class="col3 lozad" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.webp">
 
         <div class="video-wrapper col23">
-            <video muted autoplay loop>
-                <source src="acuity/acuity-motion-calendarblocks.webm">
-                <source src="acuity/acuity-motion-calendarblocks.mp4" type="video/mp4">
+            <video class="lozad" muted autoplay loop data-src="acuity/acuity-motion-calendarblocks.mp4" type="video/mp4">
             </video>
         </div>
         <div class="col23 caption">In its brand communications, Acuity surfaces appear smooth and glassy, yet welcoming and warm.</div>
 
-<!-------------------launch video----------------------->
-<!--<div class="col12 video-wrapper spaced">
-    <iframe id="player" width="100%" src="https://www.youtube-nocookie.com/embed/-bRBNzOAD2E?si=-8lDqOvAm5GJo01vcontrols=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; mute; modestbranding; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>-->
-
 <!---------------------applications------------------>
-        <div class="video-wrapper col12">
+        <div class="spaced video-wrapper col12">
             <video class="lozad" muted autoplay loop data-src="acuity/Acuity-motion-timepassage.mp4" type="video/mp4"></video>
         </div>
         <div class="video-wrapper col12">
