--- a/archive.html
+++ b/archive.html
@@ -38,9 +38,7 @@
 
 <!------------------------Le Ren----------------------->
         <div class="video-wrapper col123">
-            <video muted autoplay loop>
-                <source src="archive/leren-homepage-optimized.mp4" type="video/mp4">
-            </video>
+            <video muted autoplay loop src="archive/leren-homepage-optimized.mp4" type="video/mp4"></video>
         </div>
         <h2 class="col123">Site and wiordmark <span class="client">Le Ren, 2022</span></h2>
 
@@ -50,9 +48,7 @@
 
 <!---------------------delineator----------------------->
 <div class="video-wrapper col123">
-    <video muted autoplay loop>
-        <source src="delineator/delineator-optimized.mp4" type="video/mp4">
-    </video>
+    <video muted autoplay loop src="delineator/delineator-optimized.mp4" type="video/mp4"></video>
 </div>
 <h2 class="col123"><a href="https://mikki-janower.github.io/Delineator/" target="_blank">Delineator,</a> an open-source pixel art tool <span class="client">2023</span></h2>
 
